backup/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-backend
  namespace: ns-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-backend
  template:
    metadata:
      labels:
        app: my-app-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/tech-samples/fraud-chatbot-api:latest
          ports:
            - containerPort: 5000
