backup/web-app-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-frontend
  namespace: ns-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-frontend
  template:
    metadata:
      labels:
        app: my-app-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/tech-samples/react-fraud-chatbot-ui:latest
          ports:
            - containerPort: 3000
