backup/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-backend-service
  namespace: ns-app
spec:
  selector:
    app: my-app-backend
  ports:
    - port: 5000
      targetPort: 5000
