backup/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-frontend-service
  namespace: ns-app
spec:
  selector:
    app: my-app-frontend
  ports:
    - port: 80
      targetPort: 3000
